<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="click_sound"
        android:summary="@string/pref_description_click_sound"
        android:title="@string/pref_title_click_sound" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_difficulty_list_titles"
        android:entryValues="@array/pref_difficulty_values"
        android:key="game_difficulty"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_difficulty" />

</PreferenceScreen>
