<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#616161"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="16dp"
                android:fontFamily="serif-monospace"
                android:text="Help"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/dividerVertical"
                android:backgroundTint="@color/colorPrimary" />

            <TextView
                android:id="@+id/about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_game"
                android:textColor="#f5f5f5"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/learn_more_tictactoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/learn_more_wikipedia"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="serif-monospace"
                android:text="Game Controls"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="180dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:background="?android:attr/dividerVertical"
                android:backgroundTint="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/game_controls"
                android:textColor="#f5f5f5"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/help_dailog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="OK" />
    </LinearLayout>
</ScrollView>